# dexplore

./: .gitignore  Cargo.toml  MIGRATION_GUIDE.md  MODULE_SPEC.md  NEXT_STEPS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  sql-parser-help.md
src/: app.rs  config.rs  db.rs  main.rs  sql_editor.rs
src/db/: client.rs  mod.rs  models.rs  operations.rs
src/models/: filter.rs  mod.rs  state.rs  tab.rs
src/ui/: mod.rs  styles.rs
src/ui/components/: connection_editor.rs  data_grid.rs  database_tree.rs  filter_bar.rs  menu_bar.rs  mod.rs  pagination.rs  query_panel.rs  saved_queries_dialog.rs  settings_dialog.rs  status_bar.rs  tab_bar.rs
