[package]
name = "db-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
eframe = { version = "0.27", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.27"
egui_extras = { version = "0.27" }
poll-promise = "0.3"
native-tls = "0.2"
postgres-native-tls = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }
